WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
166949
[GTK] Cannot paste primary selection into web view in Wayland
https://bugs.webkit.org/show_bug.cgi?id=166949
Summary
[GTK] Cannot paste primary selection into web view in Wayland
Michael Catanzaro
Reported
2017-01-11 16:33:22 PST
Seems that primary selection is only half-supported. You can paste out (i.e. WebKit does update the selection clipboard when you select text) but you cannot paste into WebKit using middle-click. I thought we had a #PLATFORM(WAYLAND) check somewhere to turn off primary selection on Wayland, because it used to not be supported at all. I thought that might be the problem, but I can't find it anymore. Maybe we got rid of it.
Attachments
Patch
(2.32 KB, patch)
2017-02-17 16:30 PST
,
Michael Catanzaro
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Michael Catanzaro
Comment 1
2017-02-17 16:30:52 PST
Created
attachment 302009
[details]
Patch
WebKit Commit Bot
Comment 2
2017-02-18 02:02:56 PST
Comment on
attachment 302009
[details]
Patch Clearing flags on attachment: 302009 Committed
r212605
: <
http://trac.webkit.org/changeset/212605
>
WebKit Commit Bot
Comment 3
2017-02-18 02:02:59 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug