Source/WebKit2/WebProcess/WebCoreSupport/WebEditorClient.cpp
@@ -55,7 +55,7 @@
 #include <wtf/NeverDestroyed.h>
 #include <wtf/text/StringView.h>
 
-#if PLATFORM(X11)
+#if PLATFORM(GTK)
 #include <WebCore/PlatformDisplay.h>
 #endif
 
@@ -550,12 +550,17 @@ void WebEditorClient::setInputMethodState(bool enabled)
 
 bool WebEditorClient::supportsGlobalSelection()
 {
-#if PLATFORM(GTK) && PLATFORM(X11)
-    return PlatformDisplay::sharedDisplay().type() == PlatformDisplay::Type::X11;
-#else
-    // FIXME: Return true on other X11 platforms when they support global selection.
-    return false;
+#if PLATFORM(GTK)
+#if PLATFORM(X11)
+    if (PlatformDisplay::sharedDisplay().type() == PlatformDisplay::Type::X11)
+        return true;
 #endif
+#if PLATFORM(WAYLAND)
+    if (PlatformDisplay::sharedDisplay().type() == PlatformDisplay::Type::Wayland)
+        return true;
+#endif
+#endif
+    return false;
 }
 
 } // namespace WebKit
